lang/tests/contract/ui/fail/26-event-storage-simultaneously.stderr
error: a struct can be marked by only one of the followings: `liquid(storage)`, `liquid(event)` or `liquid(asset)` at the same time
 --> $DIR/26-event-storage-simultaneously.rs:5:5
  |
5 | /     #[liquid(event)]
6 | |     #[liquid(storage)]
7 | |     struct Noop {}
  | |__________________^
